Set: 이미지 변경

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<div class="card__face card__face--back">
 					<div class="card__content">
 						<div class="card__header">
-							<img src="pp.jpg" alt="" class="pp" />
+							<img src="https://lh3.googleusercontent.com/proxy/J5ABmzAZsj_0i73BBMNni5Bf7sbQouct2mT5pXUQW-bD3nmroAYp0kKV7AdSBlW6MlXwnrH1Xvc9JcnwianMQktZu8n7yHOqNGtGVuwAXJTmnO8a53-MVzQv" alt="" class="pp" />
 							<h2>Tyler Potts</h2>
 						</div>
 						<div class="card__body">
@@ -35,7 +35,7 @@
 				<div class="card__face card__face--back">
 					<div class="card__content">
 						<div class="card__header">
-							<img src="pp.jpg" alt="" class="pp" />
+							<img src="https://i.pinimg.com/originals/8d/f1/b5/8df1b52c342d67e39337bee565bc8fd8.png" alt="" class="pp" />
 							<h2>Tyler Potts</h2>
 						</div>
 						<div class="card__body">
@@ -54,7 +54,7 @@
 				<div class="card__face card__face--back">
 					<div class="card__content">
 						<div class="card__header">
-							<img src="pp.jpg" alt="" class="pp" />
+							<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQn126cLZ-NEmsrUkzNaLfpdPicxOY9xnYlDg&usqp=CAU" alt="" class="pp" />
 							<h2>Tyler Potts</h2>
 						</div>
 						<div class="card__body">
@@ -73,7 +73,7 @@
 				<div class="card__face card__face--back">
 					<div class="card__content">
 						<div class="card__header">
-							<img src="pp.jpg" alt="" class="pp" />
+							<img src="https://i.pinimg.com/236x/af/f5/cb/aff5cb5ba3a89f23e66ee3282745752b.jpg" alt="" class="pp" />
 							<h2>Tyler Potts</h2>
 						</div>
 						<div class="card__body">
